syntax = "proto3";
option java_multiple_files = true;
package com.group5.proto.User;

message GetUserByIdRequest {
  int64 userId = 1;
}

message  UserResponse{
  string name = 1;
  string surname = 2;
  string email = 3;
}

message RegistrationInfo {
  string name = 1;
  string surname = 2;
  string email = 3;
  string password = 4;
}

message CreateUserRequest {
  string email = 1;
  string name = 2;
  string surname = 3;
  string password = 4;
}

message CreateUserResponse {
  string email = 1;
  string name = 2;
  string surname = 3;
  string password = 4;
}

service UserService {
  rpc getUserById(GetUserByIdRequest) returns (GetUserByIdResponse);
  rpc createUser(CreateUserRequest) returns (CreateUserResponse);
  rpc registerUser(RegistrationInfo) returns (UserResponse);
  rpc checkLoginInfo(LoginInfo) returns (LoginResponse);
}